@@ -1,4 +1,7 @@
 2005-12-26 Kalpit Desai <kvdesai@email.unc.edu>
+	* lt_analysis_gui.m: Added a check for empty database in couple of places.
+
+2005-12-26 Kalpit Desai <kvdesai@email.unc.edu>
 	* lt_analysis_gui.m: 
 	- Replaced the referenced fieldnames of the global database with absolute names, thus improving readability of the code and  speed of the program. Referencing was useful only while the absolute names were in experimental phase.
 	- Fixed a typo.
